--- a/_config.yml
+++ b/_config.yml
@@ -18,4 +18,4 @@ plugins:
 header_pages:
   - navigation/search.md
   - navigation/about.md
-  - navigation/hours-tracker.md
+  - hacks/hours-tracker.md
