--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SKY-Pulse
-description: "Your application description"
+description: "Track your volunteer hours and participation in SKY-Pulse events"
 owner_name: Rudra Joshi
 github_username: RudraBJoshi 
 github_repo: "SKY-Pulse"
