--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "",
+  "outputDirectory": "",
   "builds": [
     {
       "src": "api/index.py",
@@ -11,10 +13,5 @@
       "src": "/api/(.*)",
       "dest": "api/index.py"
     }
-  ],
-  "env": {
-    "SECRET_KEY": "@sky-pulse-secret",
-    "ADMIN_USERNAME": "@sky-pulse-admin-username",
-    "ADMIN_PASSWORD_HASH": "@sky-pulse-admin-password-hash"
-  }
+  ]
 }
