--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "",
-  "outputDirectory": "",
+  "framework": null,
   "builds": [
     {
       "src": "api/index.py",
